<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/icon"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:contentDescription="@string/icon" />
    <com.google.android.gms.ads.AdView
        xmlns:googleads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/ad"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        googleads:adSize="BANNER"
        googleads:adUnitId="@string/admob_id" 
        android:layout_alignParentBottom="true"/>
    
    <!-- Show on Map button -->
    <Button
        android:id="@+id/btn_show_map"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/ad"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="@string/show_map" />
    <!-- List view -->
    <ListView
        android:id="@+id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_show_map"
        android:layout_below="@id/icon"
        android:padding="10dp" />
</RelativeLayout>